@@ -5,7 +5,7 @@ int __signbitl (long double x) {
   __asm__ ("fxam; fstsw %%ax;"
 	   : "=a" (sw)
 	   : "t" (x) );
-  return sw & __FP_SIGNBIT;
+  return (sw & __FP_SIGNBIT) != 0;
 }
 
 int __attribute__ ((alias ("__signbitl"))) signbitl (long double);
