@@ -5,6 +5,6 @@ int __signbitf (float x) {
   __asm__ ("fxam; fstsw %%ax;"
 	   : "=a" (sw)
 	   : "t" (x) );
-  return sw & __FP_SIGNBIT;
+  return (sw & __FP_SIGNBIT) != 0;
 }
 int __attribute__ ((alias ("__signbitf"))) signbitf (float);
